removed bulma framework and switched to bootstrap, updated html layout

--- a/index.html
+++ b/index.html
@@ -1,73 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
     <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
   </head>
   <body>
-    <section class="hero">
-      <div class="hero-body has-text-centered">
-        <p class="title">
-          Weather Dashboard
-        </p>
+    <header>
+      <div class="container">
+        <h1 class="display-1">Weather Dashboard</h1>
       </div>
-    </section>  
-  <section class="section">
-    <div class="container">
-      <div class="columns">
-        <div class="column is-one-third">
-          <form class="box">
-            <div class="field">
-              <label class="label">Search for a City:</label>
-              <div class="control">
-                <input class="input" type="city" placeholder="Enter City">
-                <input class="button is-primary is-fullwidth" type="submit" value="Search">
-              </div>
-            </div>
-          <div class="columns is-mobile">
-            <div class="column">
-              <p class="bd-notification is-info">First nested column</p>
-              <input class="button is-primary is-light is-fullwidth" type="submit" value="Austin"> <br>
-              <input class="button is-primary is-light is-fullwidth" type="submit" value="Chicago"><br>
-              <input class="button is-primary is-light is-fullwidth" type="submit" value="New York"><br>
-              <input class="button is-primary is-light is-fullwidth" type="submit" value="Orlando"><br>
-              <input class="button is-primary is-light is-fullwidth" type="submit" value="San Francisco"><br>
-              <input class="button is-primary is-light is-fullwidth" type="submit" value="Seattle"><br>
-              <input class="button is-primary is-light is-fullwidth" type="submit" value="Denver"><br>
-              <input class="button is-primary is-light is-fullwidth" type="submit" value="Atlanta">
+    </header>
+
+    <div class= "container">
+      <div class= "row">
+        <div class= "col-3">
+          <div class="card">
+            <h3>Search for a City:</h3>
+            <input name="searchCityInput" id="searchCity" type="text" autofocus="true" class="form-input" />
+            <button type="button" class="btn btn-primary">Search</button>
+            <hr/>
+            <div class="btn-group-vertical">
+              <button type="button" class="btn btn-primary" value="Austin">Austin</button> <br>
+              <button type="button" class="btn btn-primary" value="Chicago">Chicago</button><br>
+              <button type="button" class="btn btn-primary" value="New York">New York</button><br>
+              <button type="button" class="btn btn-primary" value="Orlando">Orlando</button><br>
+              <button type="button" class="btn btn-primary" value="San Francisco">San Francisco</button><br>
+              <button type="button" class="btn btn-primary" value="Seattle">Seattle</button><br>
+              <button type="button" class="btn btn-primary" value="Denver">Denver</button><br>
+              <button type="button" class="btn btn-primary" value="Atlanta">Atlanta</button>
             </div>
           </div>
         </div>
-        <div class="column">
-          <div class="box">
-            <p class="bd-notification is-danger">Second column</p>
-          </div>
-          <div class="column">
-            <p class="bd-notification is-danger">5-Day Forecast:</p>
-            <div class="columns is-mobile">
-              <div class="column">
-                <p class="bd-notification is-danger">Day 1</p>
-              </div>
-              <div class="column">
-                <p class="bd-notification is-danger">Day 2</p>
-              </div>
-              <div class="column">
-                <p class="bd-notification is-danger">Day 3</p>
-              </div>
-              <div class="column">
-                <p class="bd-notification is-danger">Day 4</p>
-              </div>
-              <div class="column">
-                <p class="bd-notification is-danger">Day 5</p>
-              </div>
+        <br>
+        <div class="col-9">
+          <div class="custom-current-weather-container">
+
+            <!-- Current Weather Container -->
+            <div class="card" style="width: auto;">
+                <div class="card-body">
+                    <h5 class="card-title" id="current-city-weather">current city</h5>
+                        <img id="current-weather-icon">
+                    <p class="card-text">Temp: <span class="card-text" id="current-temp"></span></p>
+                    <p class="card-text">Wind: <span class="card-text" id="current-wind-speed"></span></p>
+                    <p class="card-text">Humidity: <span class="card-text" id="current-humidity"></span></p>
+                    <p class="card-text">UV Index: <span id="current-uvi"></span></p>
+                </div>
             </div>
           </div>
+          <!-- 5-day forecast container with cards -->
+          <div class="custom-forecast-container">
+            <h5>5-Day Forecast:</h5>
+            <div class="row justify-content-evenly">
+                <div class="col">
+                  <div class="card custom-forecast-card">
+                    <div class="card-body bg-secondary">
+                      <h5 class="card-title forecast-date text-white"></h5>
+                      <img class="card-img-top forecast-icon">
+                      <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
+                      <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
+                      <p class="card-text text-white text-nowrap">Humidity: <span class="card-text forecast-humidity"></span></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card custom-forecast-card">
+                    <div class="card-body bg-secondary">
+                      <h5 class="card-title forecast-date text-white"></h5>
+                      <img class="card-img-top forecast-icon">
+                      <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
+                      <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
+                      <p class="card-text text-white text-nowrap">Humidity: <span class="card-text forecast-humidity"></span></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card custom-forecast-card">
+                    <div class="card-body bg-secondary">
+                      <h5 class="card-title forecast-date text-white"></h5>
+                      <img class="card-img-top forecast-icon">
+                      <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
+                      <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
+                      <p class="card-text text-white text-nowrap">Humidity: <span class="card-text forecast-humidity"></span></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card custom-forecast-card">
+                    <div class="card-body bg-secondary">
+                      <h5 class="card-title forecast-date text-white"></h5>
+                      <img class="card-img-top forecast-icon">
+                      <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
+                      <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
+                      <p class="card-text text-white text-nowrap">Humidity: <span class="card-text forecast-humidity"></span></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card custom-forecast-card">
+                    <div class="card-body bg-secondary">
+                      <h5 class="card-title forecast-date text-white"></h5>
+                      <img class="card-img-top forecast-icon">
+                      <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
+                      <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
+                      <p class="card-text text-white text-nowrap">Humidity: <span class="card-text forecast-humidity"></span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div> 
+          </div> 
         </div>
-      </div>
-    </div>  
-  </section>
-  <script src= "assets/script.js"></script>
+      </div>  
+    </div>
+
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+      <script src= "assets/script.js"></script>
   </body>
 </html>
