--- a/index.html
+++ b/index.html
@@ -13,24 +13,19 @@
         <h1 class="display-1">Weather Dashboard</h1>
       </div>
     </header>
-
+ <!-- Search bar container-->
     <div class= "container">
       <div class= "row">
         <div class= "col-3">
           <div class="card">
             <h3>Search for a City:</h3>
-            <input name="searchCityInput" id="searchCity" type="text" autofocus="true" class="form-input" />
-            <button type="button" class="btn btn-primary">Search</button>
+            <form id="search-form">
+              <input name="searchCityInput" id="searchCity" type="text" autofocus="true" class="form-input" />
+              <button type="button" class="btn btn-primary">Search</button>
+            </form>
+            
             <hr/>
-            <div class="btn-group-vertical">
-              <button type="button" class="btn btn-primary" value="Austin">Austin</button> <br>
-              <button type="button" class="btn btn-primary" value="Chicago">Chicago</button><br>
-              <button type="button" class="btn btn-primary" value="New York">New York</button><br>
-              <button type="button" class="btn btn-primary" value="Orlando">Orlando</button><br>
-              <button type="button" class="btn btn-primary" value="San Francisco">San Francisco</button><br>
-              <button type="button" class="btn btn-primary" value="Seattle">Seattle</button><br>
-              <button type="button" class="btn btn-primary" value="Denver">Denver</button><br>
-              <button type="button" class="btn btn-primary" value="Atlanta">Atlanta</button>
+            <div class="btn-group-vertical" id="addBtnSearch">
             </div>
           </div>
         </div>
