--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
-    <title>Weather Dashboard</title>
+    <title>Weather Dashboard</title>    
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+
   </head>
   <body>
     <header>
@@ -36,12 +42,13 @@
             <!-- Current Weather Container -->
             <div class="card" style="width: auto;">
                 <div class="card-body" id="current-city-weather">
-                    <h5 class="card-title"></h5>
-                        <img id="current-weather-icon">
-                    <p class="card-text">Temp: <span class="card-text" id="current-temp"></span></p>
-                    <p class="card-text">Wind: <span class="card-text" id="current-wind-speed"></span></p>
-                    <p class="card-text">Humidity: <span class="card-text" id="current-humidity"></span></p>
-                    <p class="card-text">UV Index: <span id="current-uvi"></span></p>
+                    <h5 class="card-title" id="currentCityName"></h5>
+                    <h5 class="card-title" id="currentDate"></h5>
+                    <img id="currentWeatherIcon">
+                    <p class="card-text">Temp: <span class="card-text" id="currentTemp"></span></p>
+                    <p class="card-text">Wind: <span class="card-text" id="currentWindSpeed"></span></p>
+                    <p class="card-text">Humidity: <span class="card-text" id="currentHumidity"></span></p>
+                    <p class="card-text">UV Index: <span id="currentUVI"></span></p>
                 </div>
             </div>
           </div>
