added second url call and update current weather data

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   <div class="card custom-forecast-card">
                     <div class="card-body bg-secondary">
                       <h5 class="card-title forecast-date text-white"></h5>
-                      <img class="card-img-top forecast-icon">
+                      <img class="card-img-top forecast-icon" src=''>
                       <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
                       <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
                       <p class="card-text text-white text-nowrap">Humidity: <span class="card-text forecast-humidity"></span></p>
