added local storage and onclick event

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <div class= "col-3">
           <div class="card">
             <h3>Search for a City:</h3>
-            <form id="search-form">
+            <div id="search-form">
               <input name="searchCityInput" id="searchCity" type="text" autofocus="true" class="form-input" />
               <button type="button" class="btn btn-primary" id="searchBtn">Search</button>
-            </form>
+            </div>
             
             <hr/>
             <div class="btn-group-vertical" id="addBtnSearch">
