--- a/index.html
+++ b/index.html
@@ -1,125 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
-    <title>Weather Dashboard</title>    
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
 
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <h1 class="display-1">Weather Dashboard</h1>
-      </div>
-    </header>
- <!-- Search bar container-->
-    <div class= "container">
-      <div class= "row">
-        <div class= "col-3">
-          <div class="card">
-            <h3>Search for a City:</h3>
-            <div id="search-form">
-              <input name="searchCityInput" id="searchCity" type="text" autofocus="true" class="form-input" />
-              <button type="button" class="btn btn-primary" id="searchBtn">Search</button>
-            </div>
-            
-            <hr/>
-            <div class="btn-group-vertical" id="addBtnSearch">
-            </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
+  <title>Weather Dashboard</title>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <h1 class="display-1">Weather Dashboard</h1>
+    </div>
+  </header>
+  <!-- Search bar container-->
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+        <div class="card">
+          <h3>Search for a City:</h3>
+          <div id="search-form">
+            <input name="searchCityInput" id="searchCity" type="text" autofocus="true" class="form-input" />
+            <button type="button" class="btn btn-primary" id="searchBtn">Search</button>
+          </div>
+
+          <hr />
+          <div class="btn-group-vertical" id="addBtnSearch">
           </div>
         </div>
-        <br>
-        <div class="col-9">
-          <div class="custom-current-weather-container">
-
-            <!-- Current Weather Container -->
-            <div class="card" style="width: auto;">
-                <div class="card-body" id="current-city-weather">
-                    <h5 class="card-title" id="currentCityName"></h5>
-                    <h5 class="card-title" id="currentDate"></h5>
-                    <img id="currentWeatherIcon">
-                    <p class="card-text">Temp: <span class="card-text" id="currentTemp"></span></p>
-                    <p class="card-text">Wind: <span class="card-text" id="currentWindSpeed"></span></p>
-                    <p class="card-text">Humidity: <span class="card-text" id="currentHumidity"></span></p>
-                    <p class="card-text">UV Index: <span id="currentUVI"></span></p>
-                </div>
-            </div>
-          </div>
-          <!-- 5-day forecast container with cards -->
-          <div class="custom-forecast-container">
-            <h5>5-Day Forecast:</h5>
-            <div class="row justify-content-evenly">
+      </div>
+      <br>
+      <div class="col-9">
+        <div class="custom-current-weather-container">
+          <!-- Current Weather Container -->
+          <div class="container">
+            <div class="card bg-secondary" style="width: auto;">
+              <h5 class="card-title text-white" id="currentCityName"></h5>
+              <div class="row">
                 <div class="col">
-                  <div class="card custom-forecast-card">
-                    <div class="card-body bg-secondary">
-                      <h5 class="card-title forecast-date text-white"></h5>
-                      <img class="card-img-top forecast-icon" src=''>
-                      <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
-                      <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
-                      <p class="card-text text-white text-nowrap">Humidity: <span class="card-text forecast-humidity"></span></p>
-                    </div>
+                  <div class="card-body bg-secondary" id="current-city-weather">
+                    <h5 class="card-title text-white" id="currentDate"></h5>
+                    <p class="card-text text-white">Temp: <span class="card-text" id="currentTemp"></span></p>
+                    <p class="card-text text-white">Wind: <span class="card-text" id="currentWindSpeed"></span></p>
+                    <p class="card-text text-white">Humidity: <span class="card-text" id="currentHumidity"></span></p>
+                    <p class="card-text text-white">UV Index: <span id="currentUVI"></span></p>
                   </div>
-                </div>
+                </div>    
                 <div class="col">
-                  <div class="card custom-forecast-card">
-                    <div class="card-body bg-secondary">
-                      <h5 class="card-title forecast-date text-white"></h5>
-                      <img class="card-img-top forecast-icon">
-                      <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
-                      <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
-                      <p class="card-text text-white text-nowrap">Humidity: <span class="card-text forecast-humidity"></span></p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card custom-forecast-card">
-                    <div class="card-body bg-secondary">
-                      <h5 class="card-title forecast-date text-white"></h5>
-                      <img class="card-img-top forecast-icon">
-                      <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
-                      <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
-                      <p class="card-text text-white text-nowrap">Humidity: <span class="card-text forecast-humidity"></span></p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card custom-forecast-card">
-                    <div class="card-body bg-secondary">
-                      <h5 class="card-title forecast-date text-white"></h5>
-                      <img class="card-img-top forecast-icon">
-                      <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
-                      <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
-                      <p class="card-text text-white text-nowrap">Humidity: <span class="card-text forecast-humidity"></span></p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card custom-forecast-card">
-                    <div class="card-body bg-secondary">
-                      <h5 class="card-title forecast-date text-white"></h5>
-                      <img class="card-img-top forecast-icon">
-                      <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
-                      <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
-                      <p class="card-text text-white text-nowrap">Humidity: <span class="card-text forecast-humidity"></span></p>
-                    </div>
-                  </div>
+                  <div class="card-body bg-secondary mx-auto" id="currentWeatherIcon"></div>
                 </div>
               </div>
-            </div> 
-          </div> 
+            </div>
+          </div>
         </div>
-      </div>  
+        <!-- 5-day forecast container with cards -->
+        <div class="custom-forecast-container">
+          <h5>5-Day Forecast:</h5>
+          <div class="row justify-content-evenly">
+            <div class="col">
+              <div class="card custom-forecast-card">
+                <div class="card-body bg-secondary">
+                  <h5 class="card-title forecast-date text-white"></h5>
+                  <img class="card-img-top forecast-icon" src=''>
+                  <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
+                  <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
+                  <p class="card-text text-white text-nowrap">Humidity: <span
+                      class="card-text forecast-humidity"></span></p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card custom-forecast-card">
+                <div class="card-body bg-secondary">
+                  <h5 class="card-title forecast-date text-white"></h5>
+                  <img class="card-img-top forecast-icon">
+                  <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
+                  <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
+                  <p class="card-text text-white text-nowrap">Humidity: <span
+                      class="card-text forecast-humidity"></span></p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card custom-forecast-card">
+                <div class="card-body bg-secondary">
+                  <h5 class="card-title forecast-date text-white"></h5>
+                  <img class="card-img-top forecast-icon">
+                  <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
+                  <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
+                  <p class="card-text text-white text-nowrap">Humidity: <span
+                      class="card-text forecast-humidity"></span></p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card custom-forecast-card">
+                <div class="card-body bg-secondary">
+                  <h5 class="card-title forecast-date text-white"></h5>
+                  <img class="card-img-top forecast-icon">
+                  <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
+                  <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
+                  <p class="card-text text-white text-nowrap">Humidity: <span
+                      class="card-text forecast-humidity"></span></p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card custom-forecast-card">
+                <div class="card-body bg-secondary">
+                  <h5 class="card-title forecast-date text-white"></h5>
+                  <img class="card-img-top forecast-icon">
+                  <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
+                  <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
+                  <p class="card-text text-white text-nowrap">Humidity: <span
+                      class="card-text forecast-humidity"></span></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+  </div>
 
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-      <script src= "assets/script.js"></script>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+  </script>
+  <script src="assets/script.js"></script>
+</body>
+
 </html>
