updated forecast and buttons

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
           <!-- Current Weather Container -->
           <div class="container">
             <div class="card bg-secondary" style="width: auto;">
-              <h5 class="card-title text-white" id="currentCityName"></h5>
+              <h2 class="card-title text-white" id="currentCityName"></h2>
               <div class="row">
                 <div class="col">
                   <div class="card-body bg-secondary" id="current-city-weather">
-                    <h5 class="card-title text-white" id="currentDate"></h5>
+                    <h4 class="card-title text-white" id="currentDate"></h4>
                     <p class="card-text text-white">Temp: <span class="card-text" id="currentTemp"></span></p>
                     <p class="card-text text-white">Wind: <span class="card-text" id="currentWindSpeed"></span></p>
                     <p class="card-text text-white">Humidity: <span class="card-text" id="currentHumidity"></span></p>
@@ -66,60 +66,55 @@
             <div class="col">
               <div class="card custom-forecast-card">
                 <div class="card-body bg-secondary">
-                  <h5 class="card-title forecast-date text-white"></h5>
-                  <img class="card-img-top forecast-icon" src=''>
-                  <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
-                  <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
-                  <p class="card-text text-white text-nowrap">Humidity: <span
-                      class="card-text forecast-humidity"></span></p>
+                  <h5 class="card-title text-black" id= "forecastDate1"></h5>
+                  <div class="card-img-top forecast-icon1" id = "dailyIcon1"></div>
+                  <p class="card-text text-black text-nowrap">Temp: <span class="card-text" id= "forecastTemp1"></span></p>
+                  <p class="card-text text-black text-nowrap">Wind: <span class="card-text" id= "forecastWind1"></span></p>
+                  <p class="card-text text-black text-nowrap">Humidity: <span class="card-text" id= "forecastHumidity1"></span></p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card custom-forecast-card">
                 <div class="card-body bg-secondary">
-                  <h5 class="card-title forecast-date text-white"></h5>
-                  <img class="card-img-top forecast-icon">
-                  <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
-                  <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
-                  <p class="card-text text-white text-nowrap">Humidity: <span
-                      class="card-text forecast-humidity"></span></p>
+                  <h5 class="card-title text-black" id= "forecastDate2"></h5>
+                  <div class="card-img-top forecast-icon2" id = "dailyIcon2"></div>
+                  <p class="card-text text-black text-nowrap">Temp: <span class="card-text" id= "forecastTemp2"></span></p>
+                  <p class="card-text text-black text-nowrap">Wind: <span class="card-text" id= "forecastWind2"></span></p>
+                  <p class="card-text text-black text-nowrap">Humidity: <span class="card-text" id= "forecastHumidity2"></span></p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card custom-forecast-card">
                 <div class="card-body bg-secondary">
-                  <h5 class="card-title forecast-date text-white"></h5>
-                  <img class="card-img-top forecast-icon">
-                  <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
-                  <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
-                  <p class="card-text text-white text-nowrap">Humidity: <span
-                      class="card-text forecast-humidity"></span></p>
+                  <h5 class="card-title text-black" id= "forecastDate3"></h5>
+                  <div class="card-img-top forecast-icon3" id = "dailyIcon3"></div>
+                  <p class="card-text text-black text-nowrap">Temp: <span class="card-text" id= "forecastTemp3"></span></p>
+                  <p class="card-text text-black text-nowrap">Wind: <span class="card-text" id= "forecastWind3"></span></p>
+                  <p class="card-text text-black text-nowrap">Humidity: <span class="card-text" id= "forecastHumidity3"></span></p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card custom-forecast-card">
                 <div class="card-body bg-secondary">
-                  <h5 class="card-title forecast-date text-white"></h5>
-                  <img class="card-img-top forecast-icon">
-                  <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
-                  <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
-                  <p class="card-text text-white text-nowrap">Humidity: <span
-                      class="card-text forecast-humidity"></span></p>
+                  <h5 class="card-title text-black" id= "forecastDate4"></h5>
+                  <div class="card-img-top forecast-icon4" id = "dailyIcon4"></div>
+                  <p class="card-text text-black text-nowrap">Temp: <span class="card-text" id= "forecastTemp4"></span></p>
+                  <p class="card-text text-black text-nowrap">Wind: <span class="card-text" id= "forecastWind4"></span></p>
+                  <p class="card-text text-black text-nowrap">Humidity: <span class="card-text" id= "forecastHumidity4"></span></p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card custom-forecast-card">
                 <div class="card-body bg-secondary">
-                  <h5 class="card-title forecast-date text-white"></h5>
-                  <img class="card-img-top forecast-icon">
-                  <p class="card-text text-white text-nowrap">Temp: <span class="card-text forecast-temp"></span></p>
-                  <p class="card-text text-white text-nowrap">Wind: <span class="card-text forecast-wind"></span></p>
-                  <p class="card-text text-white text-nowrap">Humidity: <span
-                      class="card-text forecast-humidity"></span></p>
+                  <h5 class="card-title text-black" id= "forecastDate5"></h5>
+                  <div class="card-img-top forecast-icon5" id = "dailyIcon5"></div>
+                  <p class="card-text text-black text-nowrap">Temp: <span class="card-text" id= "forecastTemp5"></span></p>
+                  <p class="card-text text-black text-nowrap">Wind: <span class="card-text" id= "forecastWind5"></span></p>
+                  <p class="card-text text-black text-nowrap">Humidity: <span class="card-text" id= "forecastHumidity5"></span></p>
                 </div>
               </div>
             </div>
